--- a/for_study_app1/templates/dashboard.html
+++ b/for_study_app1/templates/dashboard.html
@@ -8,7 +8,7 @@
     <h5>CUSTOMERS:</h5>
     <hr>
     <div class="card card-body">
-      <a class="btn btn-primary btn-sm btn-block" href="">Create Customers</a>
+      <a class="btn btn-primary btn-sm btn-block" href="{%url 'createcustomer' %}">Create Customers</a>
       <table class="table table-sm">
         <tr>
           <th></th>
@@ -34,7 +34,7 @@
   <h5>LAST 5 ORDERS:</h5>
   <hr>
   <div class="card card-body">
-    <a class="btn btn-primary btn-sm btn-block" href="">Create Order</a>
+    <a class="btn btn-primary btn-sm btn-block" href="{%url 'orderform' %}">Create Order</a>
     <table class="table table-sm">
       <tr>
         <th>Customer</th>
@@ -51,8 +51,8 @@
         <td>{{order.product}}</td>
         <td>{{order.created_date}}</td>
         <td>{{order.status}}</td>
-        <td><a class="btn btn-sm btn-info" href="#">Update</a></td>
-        <td><a class="btn btn-sm btn-info" href="#">Delete</a></td>
+        <td><a class="btn btn-sm btn-info" href="{%url 'orderupdate' order.id %}">Update</a></td>
+        <td><a class="btn btn-sm btn-info" href="{%url 'deleteorder' order.id %}">Delete</a></td>
 
       </tr>
 
