Added theme to order form template

--- a/for_study_app1/templates/order_form.html
+++ b/for_study_app1/templates/order_form.html
@@ -3,13 +3,18 @@
 
 <br>
 <br>
+<div class="row">
+  <div class="col-md-6">
+    <div class="card card-body">
+      <form  action="" method="POST">
+        {%csrf_token%}
+        {{form}}
 
-<form  action="" method="POST">
-  {%csrf_token%}
-  {{form}}
 
+        <input type="submit" name="Submit" >
 
-  <input type="submit" name="Submit" >
-
-</form>
+      </form>
+    </div>
+  </div>
+</div>
 {%endblock%}
