Added new button theme

--- a/for_study_app1/templates/order_form.html
+++ b/for_study_app1/templates/order_form.html
@@ -11,7 +11,7 @@
         {{form}}
 
 
-        <input type="submit" name="Submit" >
+        <input class="btn btn-primary" type="submit" name="Submit" >
 
       </form>
     </div>
