--- a/for_study_app1/templates/create_customer.html
+++ b/for_study_app1/templates/create_customer.html
@@ -10,7 +10,7 @@
 
         {{form}}
 
-        <input type="submit" name="Submit" >
+        <input class="btn btn-primary" type="submit" name="Submit" >
         </form>
       </div>
     </div>
