--- a/for_study_app1/templates/order_form.html
+++ b/for_study_app1/templates/order_form.html
@@ -8,7 +8,13 @@
     <div class="card card-body">
       <form  action="" method="POST">
         {%csrf_token%}
+        {{formset.management_form}}
+        {%for form in formset%}
+
+
         {{form}}
+        <hr>
+        {%endfor%}
 
 
         <input class="btn btn-primary" type="submit" name="Submit" >
