--- a/for_study_app1/templates/customer.html
+++ b/for_study_app1/templates/customer.html
@@ -7,7 +7,7 @@
       <h5>Customer: {{customers.name}}</h5>
       <hr>
       <a class="btn btn-outline-info  btn-sm btn-block" href="">Update Customer</a>
-			<a class="btn btn-outline-danger  btn-sm btn-block" href="">Delete Customer</a>
+			<a class="btn btn-outline-info  btn-sm btn-block" href="{%url 'orderform' customers.id %}">Place order</a>
 
     </div>
 
@@ -71,8 +71,8 @@
           <td>{{order.product.category}}</td>
           <td>{{order.created_date}}</td>
           <td>{{order.status}}</td>
-          <td><a href="#">Update</a></td>
-          <td><a href="#">Delete</a></td>
+          <td><a href="{%url 'orderupdate' order.id %}">Update</a></td>
+          <td><a href="{%url 'deleteorder' order.id %}">Delete</a></td>
         </tr>
         {%endfor%}
 
