--- a/for_study_app1/templates/navbar.html
+++ b/for_study_app1/templates/navbar.html
@@ -15,5 +15,5 @@
 </div>
 <span>Hello,  {{request.user}}</span>
 
-<span><a href="{%url 'logout'%}">Logout</a></span>
+<span><a class='btn btn-primary' href="{%url 'logout'%}">Logout</a></span>
 </nav>
