--- a/for_study_app1/templates/navbar.html
+++ b/for_study_app1/templates/navbar.html
@@ -5,12 +5,14 @@
 </button>
 <div class="collapse navbar-collapse" id="navbarNav">
 <ul class="navbar-nav">
+  {%if request.user.is_staff%}
   <li class="nav-item active">
     <a class="nav-link" href="{%url 'dashboard'%}">Dashboard <span class="sr-only">(current)</span></a>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="{%url 'product'%}">Product</a>
   </li>
+  {%endif%}
 </ul>
 </div>
 <span>Hello,  {{request.user}}</span>
