--- a/for_study_app1/templates/user.html
+++ b/for_study_app1/templates/user.html
@@ -2,4 +2,34 @@
 {%block content%}
 {%include 'status.html'%}
 <h3>User Profile</h3>
+<hr>
+<div class="row">
+  <div class="col-md">
+    <div class="card card-body">
+      <table class="table table-sm">
+        <tr>
+          <th>Product</th>
+          <th>Category</th>
+          <th>Date of Ordered</th>
+          <th>Status</th>
+          
+        </tr>
+        {%for order in orders%}
+        <tr>
+          <td>{{order.product}}</td>
+          <td>{{order.product.category}}</td>
+          <td>{{order.created_date}}</td>
+          <td>{{order.status}}</td>
+
+        </tr>
+        {%endfor%}
+
+      </table>
+
+    </div>
+
+  </div>
+
+</div>
+
 {%endblock%}
