--- a/for_study_app1/templates/account_settings.html
+++ b/for_study_app1/templates/account_settings.html
@@ -15,7 +15,7 @@
 <div class="row">
   <div class="col-md-3">
     <div class="card card-body">
-      <a class="btn btn-warning" href="{%url 'user'%}">Back to profile</a>
+      <a class="btn btn-warning" href="{%url 'user'%}">Back to dashboard</a>
       <hr>
       <h3 style="text-align:center">Account Settings</h3>
       <hr>
