--- a/for_study_app1/templates/create_product.html
+++ b/for_study_app1/templates/create_product.html
@@ -1,26 +1,20 @@
 {%extends 'Base.html'%}
 {%block content%}
-
 <br>
 <br>
 <div class="row">
   <div class="col-md-6">
     <div class="card card-body">
-      <form  action="" method="POST">
+      <form  method="POST">
         {%csrf_token%}
-        
-        {%for frm in form%}
 
-
-          {{frm}}
-      
-        {%endfor%}
-
+        {{form}}
 
         <input class="btn btn-primary" type="submit" name="Submit" >
-
-      </form>
+        </form>
+      </div>
     </div>
-  </div>
 </div>
+
+
 {%endblock%}
