--- a/for_study_app1/templates/navbar.html
+++ b/for_study_app1/templates/navbar.html
@@ -12,9 +12,16 @@
   <li class="nav-item">
     <a class="nav-link" href="{%url 'product'%}">Product</a>
   </li>
+  <li class="nav-item">
+    <a class="nav-link" href="{%url 'customerslist' %}">Customers</a>
+  </li>
   {%else%}
   <li class="nav-item">
     <a class="nav-link" href="{%url 'account'%}">Settings</a>
+    <!-- <a class="nav-link" href="#">Available Products</a> -->
+  </li>
+  <li class="nav-item">
+   <a class="nav-link" href="{%url 'product' %}">Available Products</a> 
   </li>
   {%endif%}
 </ul>
