--- a/for_study_app1/templates/product.html
+++ b/for_study_app1/templates/product.html
@@ -6,6 +6,7 @@
   <hr>
   <br>
 
+{%if request.user.is_staff%}
 
   <div class="card card-body">
     <table class="table table-sm">
@@ -23,8 +24,27 @@
       </tr>
       {%endfor%}
     </table>
-
+    <a class="btn btn-info" href="{%url 'createproduct' %}">Add product</a>
   </div>
+{%else%}
+<div class="card card-body">
+    <table class="table table-sm">
+
+      <tr>
+        <th>Product</th>
+        <th>Category</th>
+        <th>Price (Rs.)</th>
+      </tr>
+      {%for product in products%}
+      <tr>
+        <td>{{product.name}}</td>
+        <td>{{product.category}}</td>
+        <td>{{product.price}}</td>
+      </tr>
+      {%endfor%}
+    </table>
+ </div>
 
 </div>
+{%endif%}
 {%endblock%}
